DDF-3327 Fix description overflow in Admin UI Application boxes (#2392) (#2451)

--- a/platform/admin/ui/src/main/webapp/less/utils.less
+++ b/platform/admin/ui/src/main/webapp/less/utils.less
@@ -54,7 +54,7 @@
     -moz-box-sizing: content-box;
     float: right;
     position: relative;
-    top: -25px;
+    top: -15%;
     left: 100%;
     width: 3em; margin-left: -3em;
     padding-right: 5px; // magic number #1
